--- a/templates/base.html
+++ b/templates/base.html
@@ -30,9 +30,9 @@
         </div>
     </main>
 
-    <footer class="bg-gray-800 text-white mt-12">
+    <footer class="bg-gray-800 text-white mt-12 fixed bottom-0">
         <div class="container mx-auto px-4 py-6">
-            <p class="text-center">&copy; 2024 YT-SAVE All rights reserved.</p>
+            <p class="text-center">&copy; 2025 YT-SAVE All rights reserved.</p>
         </div>
     </footer>
 </body>
